--- a/.github/workflows/run-worker.yml
+++ b/.github/workflows/run-worker.yml
@@ -2,8 +2,8 @@ name: Executar script Python a cada 1 hora
 
 on:
   schedule:
-    - cron: '0 * * * *'  # a cada 1 hora
-  workflow_dispatch:    # permite execução manual
+    - cron: '0 * * * *'
+  workflow_dispatch:
 
 jobs:
   run-script:
@@ -11,7 +11,7 @@ jobs:
 
     steps:
     - name: Clonar repositório
-      uses: actions/checkout@v4  # Atualiza para versão mais recente
+      uses: actions/checkout@v4
 
     - name: Configurar Python
       uses: actions/setup-python@v5
@@ -25,17 +25,15 @@ jobs:
     - name: Executar script Python
       run: |
         python verify_log.py &
-        sleep 60  # Aguarda 60 segundos para garantir que o script gere saida.txt
-        pkill -f "python verify_log.py" || true  # Encerra o processo
+        sleep 10  # Reduzido para 10s, ajuste se necessário
+        pkill -f "python verify_log.py" || true
 
-        - name: Commit do log atualizado
-        run: |
-          git config --global Jeff-green3002 "github-actions"
-          git config --global jeferson.santos@softgreen.com.br "github-actions@github.com"
-          git add saida.txt
-          git commit -m "Atualização automática do log [skip ci]" || echo "Nada a commitar"
-          git push
-  
+    - name: Commit do log atualizado
+      run: |
+        git config user.name "github-actions"
+        git config user.email "github-actions@github.com"
+        git add saida.txt
+        git commit -m "Atualização automática do log [skip ci]" || echo "Nada a commitar"
+        git push
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    
